--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,22 @@ ext {
 dependencies {
     // Google Guava
 	implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
+	
+	// Groovy als Skript einbinden
+	implementation group: 'org.apache.groovy', name: 'groovy', version: '4.0.22'
+	implementation group: 'org.apache.groovy', name: 'groovy-json', version: '4.0.22'
+	
+	implementation group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '3.0.22'
+	
+	
+	// JSON-B/JSON-P
+	implementation group: 'jakarta.json.bind', name: 'jakarta.json.bind-api', version: '3.0.0'
+	implementation group: 'org.eclipse', name: 'yasson', version: '3.0.2'
+    implementation group: 'jakarta.json', name: 'jakarta.json-api', version: '2.1.1'
+	implementation group: 'org.glassfish', name: 'jakarta.json', version: '2.0.1'
+	// Tinylog
+	implementation group: 'org.tinylog', name: 'tinylog-api', version: '2.5.0'
+	implementation group: 'org.tinylog', name: 'tinylog-impl', version: '2.5.0'
 
     // JUnit5-Testing
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${junitVersion}"
