--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ dependencies {
 	
 	implementation group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '3.0.22'
 	
+	// Mongodb
+	// implementation group: 'org.mongodb', name: 'mongodb-driver-sync', version: '5.1.3'
+	implementation group: 'dev.morphia.morphia', name: 'morphia-core', version: '2.4.14'
+	
+		
 	
 	// JSON-B/JSON-P
 	implementation group: 'jakarta.json.bind', name: 'jakarta.json.bind-api', version: '3.0.0'
